--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 /** hero text and nav bar **/
 nav {
+  background-color: #0f8099;
+  color: white;
   padding: 16px;
   display: flex;
   justify-content: space-evenly;
@@ -28,6 +30,10 @@ li {
 }
 
 a {
+  color: white;
   text-decoration: none;
 }
 
+a:hover {
+  color: darkblue;
+}
